k8s/namespace.yaml
# Namespace del entorno (__NAMESPACE__ lo reemplaza el CD: cine-dev|qa|prod).
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    project: cine
    env: dev
